--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Font Awesome para los iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Devicon para logos de tecnologías -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,6 +23,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#sobre-mi" class="nav-link">Sobre mí</a></li>
                 <li class="nav-item"><a href="#portafolio" class="nav-link">Portafolio</a></li>
+                <li class="nav-item"><a href="#cv" class="nav-link">Hoja de Vida</a></li>
                 <li class="nav-item"><a href="#contacto" class="nav-link">Contacto</a></li>
             </ul>
         </nav>
@@ -60,6 +63,41 @@
             </div>
         </section>
 
+        <!-- ======== SECCIÓN HABILIDADES ======== -->
+        <section id="habilidades" class="section">
+            <h2 class="section-title">Mis Habilidades</h2>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <i class="devicon-html5-plain colored"></i>
+                    <span>HTML5</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-css3-plain colored"></i>
+                    <span>CSS3</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-javascript-plain colored"></i>
+                    <span>JavaScript</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-nodejs-plain colored"></i>
+                    <span>Node.js</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-react-original colored"></i>
+                    <span>React</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-nextjs-original colored"></i>
+                    <span>Next.js</span>
+                </div>
+                <div class="skill-item">
+                    <i class="devicon-python-plain colored"></i>
+                    <span>Python</span>
+                </div>
+            </div>
+        </section>
+
         <!-- ======== SECCIÓN PORTAFOLIO ======== -->
         <section id="portafolio" class="section">
             <h2 class="section-title">Portafolio</h2>
@@ -68,6 +106,19 @@
                     Todos mis proyectos y contribuciones de código están disponibles en mi perfil de GitHub. ¡Te invito a explorarlos!
                 </p>
                 <a href="https://github.com/Sebas1699?tab=repositories" class="btn btn-primary" target="_blank">Ver mi GitHub</a>
+            </div>
+        </section>
+
+        <!-- ======== SECCIÓN HOJA DE VIDA (CV) ======== -->
+        <section id="cv" class="section cv-section">
+            <h2 class="section-title">Hoja de Vida</h2>
+            <div style="text-align: center;">
+                <p style="max-width: 600px; margin: 0 auto 2rem; color: var(--color-texto-secundario); font-size: 1.1rem;">
+                    Puedes ver y descargar mi hoja de vida en formato PDF desde el siguiente enlace.
+                </p>
+                <a href="https://uniminuto0-my.sharepoint.com/:b:/g/personal/sebastian_cogollo_uniminuto_edu_co/EVk0hvlg5XlJiGnIeC7G6bABwlsE7LxbqLrP0CmtEvV_zg?e=fShy2r" class="btn btn-primary" target="_blank">
+                   Descargar Hoja de Vida (PDF)
+                </a>
             </div>
         </section>
 
