--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
             </div>
         </section>
 
+        <!-- ======== SECCIÓN PROYECTOS DESTACADOS ======== -->
+        <section id="proyectos-destacados" class="section">
+            <h2 class="section-title">Proyectos Destacados</h2>
+            <div class="proyectos-grid">
+                <!-- Proyecto 1: Página de Venta -->
+                <div class="proyecto-card">
+                    <img src="img/casachun.png" alt="Proyecto Página de Venta en Línea" class="proyecto-img clickable-img">
+                    <div class="proyecto-info">
+                        <h3 class="proyecto-title">Página de Venta en Línea</h3>
+                        <p class="proyecto-description">Desarrollo de una plataforma e-commerce completa, enfocada en la experiencia de usuario y un sistema de gestión de productos.</p>
+                        <!-- Puedes añadir un enlace al proyecto si lo tienes -->
+                        <!-- <a href="#" class="proyecto-link" target="_blank">Ver proyecto &rarr;</a> -->
+                    </div>
+                </div>
+
+                <!-- Proyecto 2: Portal de Empleo -->
+                <div class="proyecto-card">
+                    <img src="img/portalem.png" alt="Proyecto Portal de Empleo" class="proyecto-img clickable-img">
+                    <div class="proyecto-info">
+                        <h3 class="proyecto-title">Gestión de Portal de Empleo</h3>
+                        <p class="proyecto-description">Creación de un sistema para la gestión y publicación de ofertas de empleo, conectando empresas con candidatos.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- ======== SECCIÓN PORTAFOLIO ======== -->
         <section id="portafolio" class="section">
             <h2 class="section-title">Portafolio</h2>
@@ -151,5 +177,12 @@
 
     <!-- Enlace al archivo JavaScript -->
     <script src="index.js"></script>
+
+    <!-- ======== MODAL PARA IMÁGENES ======== -->
+    <div id="image-modal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modal-img">
+    </div>
+
 </body>
 </html>
